syntax = "proto3";

package im.comet;
option go_package = "github.com/txchat/im/api/comet;comet";

import "github.com/txchat/im/api/protocol/protocol.proto";

message ListCastReq {
  repeated string keys = 1;
  im.protocol.Proto proto = 2;
}

message ListCastReply {}

message GroupCastReq {
  string gid = 1;
  im.protocol.Proto proto = 2;
}

message GroupCastReply {}

message BroadcastReq { im.protocol.Proto proto = 1; }

message BroadcastReply {}

message JoinGroupsReq {
  repeated string keys = 1;
  repeated string gid = 2;
}

message JoinGroupsReply {}

message LeaveGroupsReq {
  repeated string keys = 1;
  repeated string gid = 2;
}

message LeaveGroupsReply {}

message DelGroupsReq { repeated string gid = 1; }

message DelGroupsReply {}

service Comet {
  rpc ListCast(ListCastReq) returns (ListCastReply);
  rpc Broadcast(BroadcastReq) returns (BroadcastReply);
  rpc GroupCast(GroupCastReq) returns (GroupCastReply);
  rpc JoinGroups(JoinGroupsReq) returns (JoinGroupsReply);
  rpc LeaveGroups(LeaveGroupsReq) returns (LeaveGroupsReply);
  rpc DelGroups(DelGroupsReq) returns (DelGroupsReply);
}
